tests/errors/lifetime/unborrow/unborrow_of_uninit.sim

        fn f() {
          r: &mut i64;
          entry:
            unborrow r;
            return
        }
        